basic printer routes
